Clean up code and fix footer z-index

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,7 @@
 
 body {
 	background: #eee;
+	z-index: -101;
 }
 
 // Main
@@ -95,6 +96,7 @@ section {
 }
 
 .loader {
+	z-index: -100;
 	position: absolute;
 	top: calc(50% - 3em);
 	left: calc(50% - 3em);
