--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,5 +1,5 @@
 footer {
-	z-index: 5;
+	z-index: -1;
 	position: absolute;
 	bottom: 0;
 	display: flex;
